--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -5,14 +5,11 @@ on:
     branches:
       - Frontend
       - Backend
-
-permissions:
-  contents: write
-  deployments: write
-
+      
 jobs:
   deploy:
-
+  
+    name: Deploy to EC2
     runs-on: ubuntu-latest
     
     steps:
