--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -2,9 +2,7 @@ name: Deploy
 
 on:
   push:
-    branches:
-      - Frontend
-      - Backend
+    branches: [Frontend, Backend]
       
 jobs:
   deploy:
