--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -21,7 +21,7 @@ jobs:
 
       # Despliegue del Frontend
       - name: Deploy Frontend to EC2 Instance
-        if: github.ref == 'refs/heads/frontend'
+        if: github.ref == 'refs/heads/Frontend'
         env:
           EC2_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           SERVER_IP: ${{ secrets.SSH_HOST_FRONTEND }}
@@ -56,7 +56,7 @@ jobs:
 
       # Despliegue del Backend
       - name: Deploy Backend to EC2 Instance
-        if: github.ref == 'refs/heads/backend'
+        if: github.ref == 'refs/heads/Backend'
         env:
           EC2_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           SERVER_IP: ${{ secrets.SSH_HOST_BACKEND }}
