--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -2,7 +2,9 @@ name: Deploy
 
 on:
   push:
-    branches: [Frontend, Backend]
+    branches:
+      - Frontend
+      - Backend
     
 jobs:
   deploy:
