--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -2,10 +2,8 @@ name: Deploy
 
 on:
   push:
-    branches:
-      - Frontend
-      - Backend
-    
+    branches: [ "Backend" ]
+
 jobs:
   Deploy:
   
