--- a/.github/workflows/python-publish-backend.yml
+++ b/.github/workflows/python-publish-backend.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Deploy Backend to EC2 Instance
         env:
           EC2_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          SERVER_IP: ${{ secrets.SSH_HOST_BACKEND }}
+          SERVER_IP: ${{ secrets.SSH_HOST_BACK }}
           EC2_USER: ${{ secrets.USER_NAME }}
           APP_DIR: /home/ubuntu/Parcial/Backend
           APP_FILE: Servidor.py
