--- a/.github/workflows/python-publish-backend.yml
+++ b/.github/workflows/python-publish-backend.yml
@@ -48,8 +48,5 @@ jobs:
               sudo fuser -k 5000/tcp &&
 
               # Ejecutar la aplicación Flask
-              nohup python ${APP_FILE} > flask_server.log 2>&1 &
-
-              # Comprobar si la consola quedó libre
-              tail -n 10 flask_server.log
+              nohup python ${APP_FILE}
           '
