--- a/.github/workflows/python-publish-backend.yml
+++ b/.github/workflows/python-publish-backend.yml
@@ -25,7 +25,7 @@ jobs:
           EC2_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           SERVER_IP: ${{ secrets.SSH_HOST_BACK }}
           EC2_USER: ${{ secrets.USER_NAME }}
-          APP_DIR: /home/ubuntu/Parcial/Backend
+          APP_DIR: /home/ubuntu/Parcial
           APP_FILE: Servidor.py
         run: |
           echo "$EC2_PRIVATE_KEY" > ec2_key && chmod 600 ec2_key
@@ -33,16 +33,15 @@ jobs:
               # Acceder al directorio del backend
               cd ${APP_DIR} &&
 
-              # Activar el entorno virtual
-              source /home/ubuntu/venv/bin/activate &&
-
               # Actualizar el código desde la rama backend
               git fetch --all &&
               git reset --hard origin/Backend &&
               git pull origin Backend &&
 
-              # Instalar dependencias necesarias
-              pip install -r requirements.txt &&
+              # Activar el entorno virtual
+              source /home/ubuntu/venv/bin/activate &&
+
+              cd /home/ubuntu/Parcial/Backend &&
 
               # Detener cualquier proceso que esté usando el puerto 5000
               sudo fuser -k 5000/tcp &&
