--- a/.github/workflows/python-publish-backend.yml
+++ b/.github/workflows/python-publish-backend.yml
@@ -31,7 +31,8 @@ jobs:
           echo "$EC2_PRIVATE_KEY" > ec2_key && chmod 600 ec2_key
           ssh -o StrictHostKeyChecking=no -i ec2_key ${EC2_USER}@${SERVER_IP} '
               # Acceder al directorio del backend
-              cd ${APP_DIR} &&
+              cd /home/ubuntu/Parcial &&
+              pwd &&
 
               # Actualizar el código desde la rama backend 
               ls -a &&
