--- a/.github/workflows/python-publish-backend.yml
+++ b/.github/workflows/python-publish-backend.yml
@@ -44,17 +44,16 @@ jobs:
               git status &&
 
               # Activar el entorno virtual
-
               source /home/ubuntu/venv/bin/activate &&
 
               cd /home/ubuntu/Parcial/Backend &&
 
               # Detener cualquier proceso que esté usando el puerto 5000
-              ls &&
               sudo fuser -k 5000/tcp &&
-              ls &&
 
-              # Ejecutar la aplicación Flask
-              nohup python ${APP_FILE} & disown &&
-              pwd
+              # Ejecutar la aplicación Flask en segundo plano
+              nohup python ${APP_FILE} > nohup.out 2>&1 &
+
+              # Confirmar que el servidor está corriendo
+              tail -f nohup.out
           '
