--- a/.github/workflows/python-publish-backend.yml
+++ b/.github/workflows/python-publish-backend.yml
@@ -23,14 +23,14 @@ jobs:
       # Install dependencies
       - name: Install dependencies
         run: |
-          cd /home/ubuntu/Parcial/Backend &&
+          cd Backend &&
           pip install -r requirements.txt
           
       # Run unit tests
       - name: Run Unit Tests
         run: |
-          cd /home/ubuntu/Parcial/Backend &&
-          pytest --disable-warnings
+          cd Backend &&
+          pytest Backend/tests/test_usuario.py --disable-warnings
           
       # Despliegue del Backend si las pruebas unitarias pasan
       - name: Deploy Backend to EC2 Instance
