--- a/.github/workflows/python-publish-backend.yml
+++ b/.github/workflows/python-publish-backend.yml
@@ -41,8 +41,6 @@ jobs:
           EC2_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           SERVER_IP: ${{ secrets.SSH_HOST_BACK }}
           EC2_USER: ${{ secrets.USER_NAME }}
-          APP_DIR: /home/ubuntu/Parcial
-          APP_FILE: Servidor.py
         run: |
           echo "$EC2_PRIVATE_KEY" > ec2_key && chmod 600 ec2_key
           ssh -o StrictHostKeyChecking=no -i ec2_key ${EC2_USER}@${SERVER_IP} '
@@ -52,6 +50,7 @@ jobs:
               git reset --hard origin/Backend &&
               git pull origin Backend &&
               source /home/ubuntu/venv/bin/activate &&
+              cd /home/ubuntu/Parcial/Backend &&
               pip install -r requirements.txt &&
               sudo fuser -k 5000/tcp &&
               nohup python Servidor.py > /dev/null 2>&1 &
