--- a/.github/workflows/python-publish-backend.yml
+++ b/.github/workflows/python-publish-backend.yml
@@ -53,6 +53,6 @@ jobs:
               cd /home/ubuntu/Parcial/Backend &&
               pip install -r requirements.txt &&
               sudo fuser -k 5000/tcp &&
-              nohup python Servidor.py > /dev/null 2>&1 &
+              nohup gunicorn -w 4 -b 0.0.0.0:5000 Servidor:create_app > gunicorn.log 2>&1 &&
               echo "Servidor.py debería estar corriendo en segundo plano."
           '
