--- a/.github/workflows/python-publish-backend.yml
+++ b/.github/workflows/python-publish-backend.yml
@@ -54,5 +54,5 @@ jobs:
               pip install -r requirements.txt &&
               sudo fuser -k 5000/tcp &&
               nohup gunicorn -w 4 -b 0.0.0.0:5000 Servidor:create_app > gunicorn.log 2>&1 &
-              echo "Servidor.py debería estar corriendo en segundo plano."
+              pwd
           '
