--- a/.github/workflows/python-publish-backend.yml
+++ b/.github/workflows/python-publish-backend.yml
@@ -52,7 +52,9 @@ jobs:
               source /home/ubuntu/venv/bin/activate &&
               cd /home/ubuntu/Parcial/Backend &&
               pip install -r requirements.txt &&
+              ls &&
               sudo fuser -k 5000/tcp &&
+              pwd &&
               nohup gunicorn -w 4 -b 0.0.0.0:5000 Servidor:create_app > gunicorn.log 2>&1 &
               pwd
           '
