--- a/.github/workflows/python-publish-backend.yml
+++ b/.github/workflows/python-publish-backend.yml
@@ -55,6 +55,7 @@ jobs:
               ls &&
               fuser -k 5000/tcp
               pwd &&
-              nohup gunicorn -w 4 -b 0.0.0.0:5000 Servidor:create_app > gunicorn.log 2>&1 &
+              nohup gunicorn -w 4 -b 0.0.0.0:5000 Servidor:create_app > gunicorn.log 2>&1 & disown &&
+
               ls
           '
