--- a/.github/workflows/python-publish-backend.yml
+++ b/.github/workflows/python-publish-backend.yml
@@ -52,10 +52,7 @@ jobs:
               source /home/ubuntu/venv/bin/activate &&
               cd /home/ubuntu/Parcial/Backend &&
               pip install -r requirements.txt &&
-              ls &&
               fuser -k 5000/tcp || true &&
-              pwd &&
               tmux kill-session -t mysession || true &&  # Terminar sesión existente si existe
-              tmux new-session -d -s mysession "python Servidor.py> gunicorn.log 2>&1" &&
-              ls
+              tmux new-session -d -s mysession "python Servidor.py> gunicorn.log 2>&1"
           '
