--- a/.github/workflows/python-publish-frontend.yml
+++ b/.github/workflows/python-publish-frontend.yml
@@ -18,10 +18,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'  # Usa la versión de Node.js que prefieras
-
-      - name: Update npm
-        run: npm install -g npm@latest
-        
+          
       # Despliegue del Backend si las pruebas unitarias pasan
       - name: Deploy Frontend to EC2 Instance
         env:
@@ -31,6 +28,8 @@ jobs:
         run: |
           echo "$EC2_PRIVATE_KEY" > ec2_key && chmod 600 ec2_key
           ssh -o StrictHostKeyChecking=no -i ec2_key ${EC2_USER}@${SERVER_IP} '
+              sudo apt update &&
+              sudo apt install npm &&
               cd /home/ubuntu/Parcial &&
               git fetch --all &&
               git switch Frontend &&
