--- a/.github/workflows/python-publish-backend.yml
+++ b/.github/workflows/python-publish-backend.yml
@@ -21,18 +21,18 @@ jobs:
           python-version: '3.x'
 
       # Install dependencies
-      - name: Install dependencies
-        run: |
-          cd Backend &&
-          pip install -r requirements.txt
+      #- name: Install dependencies
+       # run: |
+        #  cd Backend &&
+         # pip install -r requirements.txt
           
       # Set PYTHONPATH and run unit tests
-      - name: Run Unit Tests
-        env:
-          PYTHONPATH: ${{ github.workspace }}/Backend
-        run: |
-          cd Backend &&
-          pytest tests/test_usuario.py --disable-warnings
+      #- name: Run Unit Tests
+       # env:
+        #  PYTHONPATH: ${{ github.workspace }}/Backend
+        #run: |
+         # cd Backend &&
+          #pytest tests/test_usuario.py --disable-warnings
           
       # Despliegue del Backend si las pruebas unitarias pasan
       - name: Deploy Backend to EC2 Instance
